@@ -1,5 +1,5 @@
 /*
-    Copyright 1997-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 1997-2012, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -31,16 +31,31 @@ namespace fostlib {
         worker( boost::function0< void > init );
         ~worker();
 
-        boost::shared_ptr< detail::future_result< void > > operator()( boost::function0< void > f );
+        boost::shared_ptr< detail::future_result< void > > operator()
+            ( boost::function0< void > f );
 
         template< typename R >
-        boost::shared_ptr< detail::future_result< R > > operator()( boost::function0< R > f ) {
+        boost::shared_ptr< detail::future_result< R > > operator()
+                ( boost::function0< R > f ) {
+            return run< R >( f );
+        }
+        template< typename R >
+        boost::shared_ptr< detail::future_result< R > > operator()
+                ( boost::function0< R > f ) const {
             return run< R >( f );
         }
 
         template< typename R >
         boost::shared_ptr< detail::future_result< R > > run( boost::function0< R > f ) {
-            boost::shared_ptr< detail::future_result< R > > future( new detail::future_result< R > );
+            boost::shared_ptr< detail::future_result< R > > future(
+                new detail::future_result< R > );
+            queue( future, typename detail::future_result< R >::function( future, f ) );
+            return future;
+        }
+        template< typename R >
+        boost::shared_ptr< detail::future_result< R > > run( boost::function0< R > f ) const {
+            boost::shared_ptr< detail::future_result< R > > future(
+                new detail::future_result< R > );
             queue( future, typename detail::future_result< R >::function( future, f ) );
             return future;
         }
@@ -48,15 +63,17 @@ namespace fostlib {
         void terminate();
 
     private:
-        void queue( boost::shared_ptr< detail::future_result< void > > j, boost::function0< void > f );
+        void queue(
+            boost::shared_ptr< detail::future_result< void > > j,
+            boost::function0< void > f ) const;
 
     private:
         typedef std::list< std::pair< boost::shared_ptr< detail::future_result< void > >, boost::function0< void > > > t_queue;
-        t_queue m_queue;
+        mutable t_queue m_queue;
         bool m_terminate;
 
-        boost::mutex m_mutex;
-        boost::condition m_control;
+        mutable boost::mutex m_mutex;
+        mutable boost::condition m_control;
         boost::thread m_thread;
 
         friend class detail::future_result< void >;
@@ -180,9 +197,17 @@ namespace fostlib {
         B synchronous( boost::function< B ( O & ) > b ) {
             return asynchronous< B >( b )();
         }
+        template< typename B >
+        B synchronous( boost::function< B ( O & ) > b ) const {
+            return asynchronous< B >( b )();
+        }
 
         template< typename B >
         future< B > asynchronous( boost::function< B ( O & ) > b ) {
+            return future< B >( worker::operator ()< B >( functor< B >( *object, b ) ) );
+        }
+        template< typename B >
+        future< B > asynchronous( boost::function< B ( O & ) > b ) const {
             return future< B >( worker::operator ()< B >( functor< B >( *object, b ) ) );
         }
 
