@@ -1,5 +1,6 @@
 2012-08-02  Kirit Saelensminde  <kirit@felspar.com>
  Implement JSON casts for json::array_t and json::object_t.
+ Allow the use of constant workers (and in_proc) which makes certain thread wrappers more obvious to implement.
 
 2012-07-22  Kirit Saelensminde  <kirit@felspar.com>
  Allow time stamps and time differences to be added and subtracted.
